--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,6 +48,10 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
+button.muted {
+  background-color: crimson;
+}
 button:hover {
   border-color: #646cff;
 }
